# AutoCLI

./: Cargo.toml  README.ja.md  README.md  README.zh.md
adapters/xiaohongshu/: publish.yaml
crates/autocli-browser/src/: auth.rs  daemon.rs  daemon_client.rs  lib.rs
crates/autocli-cli/src/: main.rs
crates/autocli-external/src/: lib.rs  loader.rs  types.rs
crates/opencli-rs-ai/: Cargo.toml
crates/opencli-rs-ai/prompts/: generate-adapter.md
crates/opencli-rs-ai/src/: ai_generate.rs  config.rs  explore.rs  lib.rs  llm.rs
crates/opencli-rs-browser/: Cargo.toml
crates/opencli-rs-browser/src/: bridge.rs  browser_launcher.rs  cdp.rs  daemon.rs  daemon_client.rs  dom_helpers.rs  lib.rs  page.rs  stealth.rs  types.rs
crates/opencli-rs-cli/src/: main.rs
crates/opencli-rs-core/src/: error.rs
extension/src/: background.ts
scripts/: install.sh
